[package]
name = "sheen"
version = "0.1.0"
edition = "2024"
description = "Preview markdown files in the browser with GitHub-style rendering"

[dependencies]
anyhow = "1"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
comrak = { version = "0.51", default-features = false, features = ["shortcodes"] }
open = "5"
tokio = { version = "1.50.0", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1.3"
insta = { version = "1.46.3", features = ["glob"] }
tower = { version = "0.5.3", features = ["util"] }
