[package]
name = "sheen"
version = "0.1.0"
edition = "2024"
description = "Preview markdown files in the browser with GitHub-style rendering"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
comrak = { version = "0.51", default-features = false, features = ["shortcodes"] }
notify = "8"
notify-debouncer-mini = "0.6"
open = "5"
tokio = { version = "1.50.0", features = ["full"] }

[dev-dependencies]
assert_cmd = "2"
futures-util = "0.3"
predicates = "3"
http-body-util = "0.1.3"
insta = { version = "1.46.3", features = ["glob"] }
tempfile = "3"
tokio-tungstenite = "0.26"
tower = { version = "0.5.3", features = ["util"] }
