[package]
name = "birta"
version = "0.4.0"
edition = "2024"
description = "Preview markdown files in the browser with GitHub-style rendering"
license = "MIT"
repository = "https://github.com/hugvit/birta"
readme = "README.md"
keywords = ["markdown", "preview", "browser", "github", "live-reload"]
categories = ["command-line-utilities", "text-processing"]
homepage = "https://github.com/hugvit/birta"

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", features = ["derive"] }
comrak = { version = "0.51", default-features = false, features = ["shortcodes", "syntect"] }
dirs = "6"
notify = "8"
notify-debouncer-mini = "0.6"
open = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syntect = { version = "5", default-features = false, features = ["plist-load"] }
tokio = { version = "1.50.0", features = ["full"] }
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
futures-util = "0.3"
predicates = "3"
http-body-util = "0.1.3"
insta = { version = "1.46.3", features = ["glob"] }
tempfile = "3"
tokio-tungstenite = "0.26"
tower = { version = "0.5.3", features = ["util"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
